# Chess_pygame

./: README.md  main.py  pyproject.toml
src/: board.py  constants.py  figure.py
src/moves/: pawn.py  rook.py
