[tool.poetry]
name = "pygame-chess"
version = "0.1.0"
description = ""
authors = ["Saviola"]
readme = "README.md"
packages = [{include = "pygame_chess"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
